tests/ui/for-loop-while/for-loop-bogosity.stderr
error[E0277]: `MyStruct` is not an iterator
  --> $DIR/for-loop-bogosity.rs:17:14
   |
LL |     for x in bogus {
   |              ^^^^^ `MyStruct` is not an iterator
   |
help: the trait `Iterator` is not implemented for `MyStruct`
  --> $DIR/for-loop-bogosity.rs:1:1
   |
LL | struct MyStruct {
   | ^^^^^^^^^^^^^^^
   = note: required for `MyStruct` to implement `IntoIterator`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
